// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameMap when map is supplied should render the map 1`] = `
<body>
  <div>
    <div
      class="grid svelte-1k4uhdc"
      role="button"
    >
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc"
      />
      
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc"
      />
      
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc"
      />
      
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc"
      />
      <div
        class="svelte-1k4uhdc"
      />
      
    </div>
  </div>
</body>
`;

exports[`GameMap when no map is supplied should default to coverall 1`] = `
<body>
  <div>
    <div
      class="grid svelte-1k4uhdc"
      role="button"
    >
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      <div
        class="svelte-1k4uhdc lit"
      />
      
    </div>
  </div>
</body>
`;
